gérer le filtrage ainsi que la pagination dans la méthode index , et mettre à jour la documentation swagger
